namespaces/jellyfin/jellyfin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jellyfin-tls-route
spec:
  parentRefs:
  - name: jarrett-net
    namespace: nginx-gateway
  hostnames:
  - "jellyfintwo.j5t.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jellyfin-tcp
      port: 8096
---
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-udp
  namespace: jellyfin
  annotations:
    metallb.universe.tf/allow-shared-ip: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - port: 7359
    targetPort: 7359
    name: discovery-udp
    protocol: UDP
  type: LoadBalancer
  loadBalancerIP: 192.168.3.13
  sessionAffinity: ClientIP
---
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-tcp
  namespace: jellyfin
  annotations:
    metallb.universe.tf/allow-shared-ip: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - port: 8096
    targetPort: 8096
    name: http-tcp
    protocol: TCP
  type: LoadBalancer
  loadBalancerIP: 192.168.3.13
  sessionAffinity: ClientIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
        name: jellyfin
    spec:
      nodeSelector:
        intel.feature.node.kubernetes.io/gpu: 'true'
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        supplementalGroups:
          - 109
      containers:
        - name: "jellyfin"
          image: jellyfin/jellyfin
          ports:
          - containerPort: 8096
            name: http-tcp
            protocol: TCP
          - containerPort: 8920
            name: https-tcp
            protocol: TCP
          - containerPort: 1900
            name: dlna-udp
            protocol: UDP
          - containerPort: 7359
            name: discovery-udp
            protocol: UDP
          resources:
            limits:
              memory: "12Gi"
              cpu: "10"
              gpu.intel.com/i915: "2"
          volumeMounts:
          - name: jellyfin-cache
            mountPath: /cache
          - name: jellyfin-config
            mountPath: /config
          - name: jellyfin-transcode
            mountPath: /transcode
          - name: jellyfin-media
            mountPath: /media
      volumes:
      - name: jellyfin-cache
        persistentVolumeClaim:
          claimName: jellyfin-cache-pvc
      - name: jellyfin-transcode
        emptyDir:
          medium: Memory
          sizeLimit: 12Gi
      - name: jellyfin-config
        persistentVolumeClaim:
          claimName: jellyfin-config-pvc
      - name: jellyfin-media
        nfs:
          server: truenas.local
          path: /mnt/Pool-1.18.6/movies
